# senscord

./: .gitignore  .lsp-docker.yml  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PrivacyPolicy.md  README.md  SECURITY.md
application/: CMakeLists.txt
application/multi_server/: CMakeLists.txt  SensCordServerStart.bat
application/multi_server/config/: senscord_server.xml
application/multi_server/src/: client_adapter.cpp  client_adapter.h  client_adapter_manager.cpp  client_adapter_manager.h  client_listener.cpp  client_listener.h  clientless_core_behavior.cpp  clientless_core_behavior.h  config_manager.cpp  config_manager.h  core_clientless.cpp  core_clientless.h  internal_types.h  main.cpp  multi_server.cpp  multi_server.h  publisher_adapter.cpp  publisher_adapter.h  resource_adapter.h  secondary_client_adapter.cpp  secondary_client_adapter.h  secondary_client_listener.cpp  secondary_client_listener.h  server_log.h  stream_adapter.cpp  stream_adapter.h
application/tcp_server/: CMakeLists.txt  tcp_server.cpp
application/uds_server/: CMakeLists.txt  uds_server.cpp
java/: CMakeLists.txt
java/senscord/: .project
lib/: CMakeLists.txt
lib/allocator/: CMakeLists.txt
lib/allocator/allocator_sample/: CMakeLists.txt
lib/component/: CMakeLists.txt
lib/component/audio_pcm/: CMakeLists.txt
lib/component/client/: CMakeLists.txt
lib/component/opencv_image/: CMakeLists.txt
lib/component/player/: CMakeLists.txt
lib/component/pseudo_image/: CMakeLists.txt
lib/component/skv_player/: CMakeLists.txt
lib/component/v4l2_image/: CMakeLists.txt
lib/connection/: CMakeLists.txt
lib/connection/tcp/: CMakeLists.txt  tcp_connection.cpp
lib/connection/uds/: CMakeLists.txt  replace_config.cmake  uds_connection.cpp
lib/connection/ws/: CMakeLists.txt  replace_config.cmake  shared_memory_manager.cpp  shared_memory_manager.h  shared_memory_object.h  shared_memory_object_linux.h  shared_memory_object_windows.h  ws_connection.cpp  ws_connection_manager.cpp  ws_connection_manager.h  ws_log_macro.h
lib/converter/: CMakeLists.txt
lib/converter/core_converter/: CMakeLists.txt  replace_config.cmake
lib/core/: CMakeLists.txt
lib/core/allocator/: memory_allocator_dynamic_factory.cpp  memory_allocator_dynamic_factory.h  memory_allocator_dynamic_loader.cpp  memory_allocator_dynamic_loader.h  memory_allocator_heap.cpp  memory_allocator_heap.h  memory_core.h  memory_manager.cpp  memory_manager.h  shared_allocation_firstfit.h  shared_allocation_method.h  shared_memory.h  shared_memory_allocator.cpp  shared_memory_allocator.h  shared_memory_object.h  shared_memory_object_linux.h  shared_memory_object_windows.h
lib/core/audio/: audio_pcm.cpp
lib/core/c_api/: c_audio.cpp  c_channel.cpp  c_common.cpp  c_common.h  c_config.cpp  c_config.h  c_config_reader.cpp  c_config_reader.h  c_core.cpp  c_core.h  c_environment.cpp  c_event_argument.cpp  c_frame.cpp  c_property_utils.cpp  c_rawdata_utils.cpp  c_serialize.cpp  c_status.cpp  c_stream.cpp  c_stream.h  converter_dynamic_factory.cpp  converter_dynamic_factory.h  converter_dynamic_loader.cpp  converter_dynamic_loader.h  converter_manager.cpp  converter_manager.h
lib/core/component/: component_adapter.cpp  component_adapter.h  component_config_manager.cpp  component_config_manager.h  component_manager.cpp  component_manager.h  component_port_core.cpp  component_port_core.h  core_component.cpp  core_component.h  property_lock_manager.cpp  property_lock_manager.h  standard_component.cpp  stream_source_adapter.cpp  stream_source_adapter.h  stream_source_function_lock_manager.cpp  stream_source_function_lock_manager.h  stream_source_property_accessor.cpp  stream_source_property_accessor.h
lib/core/config/: senscord.xml  senscord_allocators.xml  senscord_connections.xml  senscord_recorders.xml
lib/core/configuration/: allocator_config_reader.cpp  allocator_config_reader.h  configuration_core.cpp  configuration_core.h  core_config.cpp  core_config.h
lib/core/connection/: client_instance_utils.cpp  connection_config_manager.cpp  connection_config_manager.h  connection_dynamic_factory.cpp  connection_dynamic_factory.h  connection_dynamic_loader.cpp  connection_dynamic_loader.h  connection_manager.cpp  connection_utils.cpp
lib/core/core/: config_manager.cpp  config_manager.h  core_behavior.cpp  core_behavior.h  core_function_lock_manager.cpp  core_function_lock_manager.h  internal_types.h  senscord.cpp  server_config_fetcher.cpp  server_config_fetcher.h  server_config_manager.cpp  server_config_manager.h  status.cpp  stream_manager.cpp  stream_manager.h  version.cpp.in  version.h  version_fetcher.cpp  version_fetcher.h  version_manager.cpp  version_manager.h
lib/core/extension/: extension_library.cpp  extension_manager.cpp  extension_manager.h  stream_extension.cpp
lib/core/frame/: channel_core.cpp  channel_core.h  frame_core.cpp  frame_core.h  frame_manager.h  frame_manager_core.cpp  frame_manager_core.h  frame_manager_discard.cpp  frame_manager_discard.h  frame_manager_factory.cpp  frame_manager_factory.h  frame_manager_overwrite.cpp  frame_manager_overwrite.h  frame_manager_realtime.cpp  frame_manager_realtime.h  frame_manager_unlimited.cpp  frame_manager_unlimited.h
lib/core/loader/: class_dynamic_factory.cpp  class_dynamic_factory.h  class_dynamic_loader.cpp  class_dynamic_loader.h  component_dynamic_factory.cpp  (+3 more)
lib/osal/: CMakeLists.txt
lib/python/: CMakeLists.txt
lib/recorder/: CMakeLists.txt
lib/server/: CMakeLists.txt
lib/wamr/: CMakeLists.txt
python/: CMakeLists.txt  setup.py
python/senscord/: __init__.py  _c_api.py  _properties_audio.py  _rawdata_type.py  _temporal_contrast_data.py  _utils.py  errors.py  senscord.py  senscord_properties.py  senscord_property_utils.py  senscord_rawdata.py  senscord_types.py  serialize.py
sample/: CMakeLists.txt
sample/c/: CMakeLists.txt
sample/cpp/: CMakeLists.txt
sample/python/: CMakeLists.txt  SensCordRecorder.py  SensCordSimplePlayer.py  SensCordSmokeTestPlayer.py
utility/: CMakeLists.txt  README.txt
utility/synchronizer/: CMakeLists.txt
(+746 files in other folders)
